# quantum_rbm_research

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/quantum_rbm_research/: Hamiltonian.py  Models.py  __init__.py  quantum_utils.py  utils.py
src/quantum_rbm_research/vis/: vis_funcs.py  vis_main.py
tests/: test_ising_hamiltonian.py  test_model_rbm.py  test_model_rbm2d.py  test_quantum_rbm_research.py  test_transverse_ising_hamiltonian.py  test_utils.py
tests/vis/: vis_model_rbm.py
vis/: vis_funcs.py  vis_main.py  vis_model_rbm.py
