[tool.poetry]
name = "quantum_rbm_research"
version = "0.1.0"
description = "Quantum RBM Mapping Research"
authors = ["Brandon Kang"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
